--- a/assets/templates/blocks/footer.html
+++ b/assets/templates/blocks/footer.html
@@ -1,75 +1,95 @@
-<footer class="mt-5">
-    <div class="row position-relative">
-        <div class="col-xl-12">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="row ">
-                        <div class="col-xl-2">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h6>Компания</h6>
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link" href="#">О компании</a>
-                                        <a class="nav-link" href="#">Новости</a>
-                                    </nav>
+<div class="footer-container">
+    <footer class="mt-5 container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="row ">
+                            <div class="col-xl-2">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <div class="footer-container__nav-header">Компания</div>
+                                        <nav class="nav flex-column footer-container__nav-links">
+                                            <a class="nav-link" href="#">О компании</a>
+                                            <a class="nav-link" href="#">Новости</a>
+                                        </nav>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xl-3">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h6>Информация</h6>
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link" href="#">Помощь</a>
-                                        <a class="nav-link" href="#">Условия оплаты</a>
-                                        <a class="nav-link" href="#">Описание процесса оплаты с помощью банковской карты</a>
-                                        <a class="nav-link" href="#">Условия доставки</a>
-                                        <a class="nav-link" href="#">Гарантия на товар</a>
-                                    </nav>
+                            <div class="col-xl-3">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <div class="footer-container__nav-header">Информация</div>
+                                        <nav class="nav flex-column footer-container__nav-links">
+                                            <a class="nav-link" href="#">Помощь</a>
+                                            <a class="nav-link" href="#">Условия оплаты</a>
+                                            <a class="nav-link" href="#">Описание процесса оплаты с помощью банковской карты</a>
+                                            <a class="nav-link" href="#">Условия доставки</a>
+                                            <a class="nav-link" href="#">Гарантия на товар</a>
+                                        </nav>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xl-2">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h6>Помощь</h6>
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link" href="#">Статьи</a>
-                                        <a class="nav-link" href="#">Производители</a>
-                                    </nav>
+                            <div class="col-xl-2">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <div class="footer-container__nav-header">Помощь</div>
+                                        <nav class="nav flex-column footer-container__nav-links">
+                                            <a class="nav-link" href="#">Статьи</a>
+                                            <a class="nav-link" href="#">Производители</a>
+                                        </nav>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xl-2">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <h6>Социальные</h6>
-                                    <div class="row mt-3">
-                                        <div class="col-xl-12">
-                                            <div class="row">
-                                                <div class="col-xl-6"> <img class="mr-3" src="images/vk.svg">
-                                                </div>
-                                                <div class="col-xl-6"> <img class="mr-3" src="images/facebook.svg">
-                                                </div>
-                                                <div class="col-xl-6"> <img class="mr-3 mt-2" src="images/instagram.svg">
-                                                </div>
-                                                <div class="col-xl-6"> <img class="mr-3 mt-2" src="images/odnoklassniki.svg">
+                            <div class="col-xl-2">
+                                <div class="card border-0">
+                                    <div class="card-body">
+                                        <div class="footer-container__nav-header">Социальные</div>
+                                        <div class="row mt-3">
+                                            <div class="col-xl-12">
+                                                <div class="row">
+                                                    <div class="col-xl-6">
+                                                        <div class="footer-container__social">
+                                                            <a class="footer-container__social-link" href="#"> <img class="mr-3" src="images/vk.svg" </a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-6">
+                                                        <div class="footer-container__social">
+                                                            <a class="footer-container__social-link" href="#"> <img class="mr-3" src="images/facebook.svg"></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-6">
+                                                        <div class="footer-container__social">
+                                                            <a class="footer-container__social-link" href="#"><img class="mr-3" src="images/instagram.svg"></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-6">
+                                                        <div class="footer-container__social">
+                                                            <a class="footer-container__social-link" href="#"><img class="mr-3" src="images/odnoklassniki.svg"></a>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-xl-3">
-                            <div class="card border-0">
-                                <div class="card-body">
-                                    <p>
-                                        <span style="font-size: 24px">+7 (473) 2-600-600</span>
-                                        <span style="font-size: 24px">+7 (473) 2-600-600</span>
-                                    </p>
-                                    <b>Адрес: </b>
-                                    <p>Россия, Воронежская область, Воронеж, ул. Острогожская, 73А</p>
+                            <div class="col-xl-3">
+                                <div class="card border-0">
+                                    <div class="card-body mx-2 px-1">
+                                        <div class="phone mb-5">
+                                            <p class="phone__number text-left">
+                                                <span>+7 (473) 2-600-600</span>
+                                                <span>+7 (473) 2-600-600</span>
+                                            </p>
+                                        </div>
+                                        <div class="address">
+                                            <div class="address__text">
+                                                <b>Адрес: </b>
+                                                <p>Россия, Воронежская область, Воронеж, ул. Острогожская, 73А</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -77,5 +97,16 @@
                 </div>
             </div>
         </div>
+    </footer>
+    <div class="footer-copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="col-xl-3 offset-xl-9 text-right">
+                        © TERRITORIYA-KLIMATA.RU
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</footer>
+</div>
