--- a/assets/templates/blocks/others_section.html
+++ b/assets/templates/blocks/others_section.html
@@ -1,33 +1,33 @@
-<div class="row mt-5">
+<div class="row mt-5 other-section">
     <div class="col-xl-6">
-        <h3>Акции</h3>
+        <h3 class="other-section__header-promo">Акции</h3>
         <div class="row">
             <div class="col-xl-12 mt-3">
                 <div class="row">
                     <div class="col-xl-6">
                         <div class="card border-0">
-                            <div class="card-body">
+                            <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
                         <div class="card border-0">
-                            <div class="card-body">
+                            <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 mt-4">
                         <div class="card border-0">
-                            <div class="card-body">
+                            <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 mt-4">
                         <div class="card border-0">
-                            <div class="card-body">
+                            <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
@@ -38,34 +38,34 @@
     </div>
 
     <div class="col-xl-6">
-            <h3>Хиты продаж</h3>
+            <h3 class="other-section__header-bestsellers">Хиты продаж</h3>
             <div class="row">
                 <div class="col-xl-12 mt-3">
                     <div class="row">
                         <div class="col-xl-6">
                             <div class="card border-0">
-                                <div class="card-body">
+                                <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="card border-0">
-                                <div class="card-body">
+                                <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 mt-4">
                             <div class="card border-0">
-                                <div class="card-body">
+                                <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 mt-4">
                             <div class="card border-0">
-                                <div class="card-body">
+                                <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
