--- a/assets/templates/blocks/include_item_post.html
+++ b/assets/templates/blocks/include_item_post.html
@@ -1,15 +1,25 @@
 <div class="px-3 cat-product__inner">
-    <img class="img-fluid img-thumbnail cat-product__img" src="https://placeimg.com/200/200/people" alt="">
-    <div class="cat-product__inner-link"><a class="cat-product__link" href="#">Сплит-система (инвертор) Samsung AR09KSFPAWQNER</a></div>
-    <div class="mt-1">
-        <img width="90" src="images/stars.svg" alt=""> <span class="badge badge-light">(10)</span> <span class="badge badge-light">(<a href="#">отзывы</a>)</span>
+    <a class="cat-product-link" href="#">
+        <img class="img-fluid img-thumbnail cat-product__img" src="images/img_product_cat.png" alt="">
+        <div class="cat-product__inner-link">
+            <div class="cat-product__link">Сплит-система (инвертор) Samsung AR09KSFPAWQNER</div>
+        </div>
+    </a>
+    <div class="mt-1 cat-product__reviews">
+        <img class="cat-product__reviews-stars" src="images/stars.svg" alt=""> <span class="badge badge-light cat-product__reviews-num">(10)</span> <span class="badge badge-light cat-product__reviews-link">(<a href="#">отзывы</a>)</span>
     </div>
     <div class="row">
-        <div class="col-xl-8 cat-product__price">
-            35990 руб.
-        </div>
+        <a class="cat-product__price-link" href="#">
+            <div class="col-xl-8 cat-product__price">
+                35990 руб.
+                <span>Подробнее</span>
+            </div>
+        </a>
         <div class="col-xl-4 cat-product__button">
-            <a class="btn btn-primary btn-sm cat-product__button-call" href="#" role="button">заказать</a>
+            <a class="btn btn-primary btn-sm cat-product__button-call" href="#" role="button">
+                <span class="cat-product__button-call-icon"></span>
+                заказать
+            </a>
         </div>
     </div>
 </div>
