--- a/assets/scss/blocks/catalog_section.scss
+++ b/assets/scss/blocks/catalog_section.scss
@@ -27,8 +27,12 @@
         }
     }
 }
-
+.cat-card {
+    background: none;
+}
 .cat-product {
+    background: white;
+    border-radius: 3px;
     transition: all ease 0.8s;
     &:hover {
         box-shadow: 0px 12px 36px rgba(#B3E5FC, 1);
