--- a/assets/templates/blocks/catalog_section.html
+++ b/assets/templates/blocks/catalog_section.html
@@ -14,28 +14,28 @@
     <div class="col-xl-12 mt-3">
         <div class="row ">
             <div class="col-xl-3">
-                <div class="card border-0">
+                <div class="card border-0 cat-card">
                     <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card border-0">
+                <div class="card border-0 cat-card">
                     <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card border-0">
+                <div class="card border-0 cat-card">
                     <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card border-0">
+                <div class="card border-0 cat-card">
                     <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
