--- a/assets/templates/blocks/others_section.html
+++ b/assets/templates/blocks/others_section.html
@@ -5,28 +5,28 @@
             <div class="col-xl-12 mt-3">
                 <div class="row">
                     <div class="col-xl-6">
-                        <div class="card border-0">
+                        <div class="card border-0 cat-card">
                             <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <div class="card border-0">
+                        <div class="card border-0 cat-card">
                             <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 mt-4">
-                        <div class="card border-0">
+                        <div class="card border-0 cat-card">
                             <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 mt-4">
-                        <div class="card border-0">
+                        <div class="card border-0 cat-card">
                             <div class="card-body cat-product">
                                 @@include('include_item_post.html')
                             </div>
@@ -43,28 +43,28 @@
                 <div class="col-xl-12 mt-3">
                     <div class="row">
                         <div class="col-xl-6">
-                            <div class="card border-0">
+                            <div class="card border-0 cat-card">
                                 <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
-                            <div class="card border-0">
+                            <div class="card border-0 cat-card">
                                 <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 mt-4">
-                            <div class="card border-0">
+                            <div class="card border-0 cat-card">
                                 <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 mt-4">
-                            <div class="card border-0">
+                            <div class="card border-0 cat-card">
                                 <div class="card-body cat-product">
                                     @@include('include_item_post.html')
                                 </div>
