letter-space 1.1 > 1.1px, build wp theme

--- a/assets/scss/blocks/catalog_section.scss
+++ b/assets/scss/blocks/catalog_section.scss
@@ -51,7 +51,7 @@
     &__link {
         color: $color-lightblue;
         font-size: 16px;
-        letter-spacing: 0.18;
+        letter-spacing: 0.18px;
         overflow: hidden;
         display: block;
         height: 50px;
