--- a/assets/scss/blocks/footer.scss
+++ b/assets/scss/blocks/footer.scss
@@ -14,7 +14,7 @@
             color: $color-grey;
             white-space: pre-wrap;
             font-weight: 300;
-            letter-spacing: 1.1;
+            letter-spacing: 1.1px;
             padding-bottom: 1px;
             transition: all ease 0.4s;
             &:hover {
