--- a/assets/scss/blocks/sort_section.scss
+++ b/assets/scss/blocks/sort_section.scss
@@ -45,7 +45,7 @@
         border: 2px solid $color-lightblue;
         color: $color-lightblue;
         font-size: 35px;
-        letter-spacing: 1.5;
+        letter-spacing: 1.5px;
         position: relative;
         top: 28%;
         left: 14%;
