--- a/assets/scss/blocks/offer_section.scss
+++ b/assets/scss/blocks/offer_section.scss
@@ -12,7 +12,7 @@
         font-size: 20px;
         padding: 5px 10px 5px 10px;
         border-radius: 3px;
-        letter-spacing: 1.1;
+        letter-spacing: 1.1px;
     }
     &:hover {
         box-shadow: 0px 12px 36px rgba($color-black, 0.3);
@@ -38,7 +38,7 @@
     &__number {
         color: $color-grey;
         font-size: 24px;
-        letter-spacing: 1.4;
+        letter-spacing: 1.4px;
         text-align: right;
     }
 }
@@ -48,7 +48,7 @@
     &__text {
         color: $color-grey;
         font-size: 14px;
-        letter-spacing: 1.1;
+        letter-spacing: 1.1px;
         line-height: 24px;
     }
 }
