--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,7 +13,7 @@
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-family: 'PT Sans', sans-serif;
     font-weight: bold;
-    letter-spacing: 1.1;
+    letter-spacing: 1.1px;
 }
 
 @media (min-width: 1200px) {
