--- a/wp_theme/template_klimat/style.css
+++ b/wp_theme/template_klimat/style.css
@@ -1,3 +1,11 @@
+/*
+Theme Name: beloweb
+Version: 1.0
+Description: Проверочный шаблон от beloweb
+Author: beloweb.ru
+Author URI: http://beloweb.ru/about
+*/
+
 @import url("https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&subset=cyrillic");
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css");
 .btn-primary {
@@ -58,11 +66,11 @@
     color: #212121;
     margin-left: 20px;
     font-size: 16px;
-    letter-spacing: 1.1px; }
+    letter-spacing: 1.1; }
   .main_menu__nav-item {
     padding-right: 15px;
     font-size: 21px;
-    letter-spacing: 1.1px;
+    letter-spacing: 1.1;
     font-weight: 500; }
     .main_menu__nav-item-icon {
       width: 20px;
@@ -93,7 +101,7 @@
       white-space: pre-wrap;
       font-weight: 300;
       line-height: 28px;
-      letter-spacing: 1.1px; }
+      letter-spacing: 1.1; }
       .main_menu__nav-dropcat-link:hover {
         background: none;
         color: #757575; }
@@ -184,7 +192,7 @@
         -webkit-transition: all ease 0.4s;
         -o-transition: all ease 0.4s;
         transition: all ease 0.4s;
-        vertical-align: initial; }
+        vertical-align: none; }
         .main_menu__search-button-icon:hover {
           opacity: 0.7;
           -webkit-transition: all ease 0.4s;
@@ -208,7 +216,7 @@
     padding: 5px 10px 5px 10px;
     -webkit-border-radius: 3px;
             border-radius: 3px;
-    letter-spacing: 1.1px; }
+    letter-spacing: 1.1; }
   .offer-product:hover {
     -webkit-box-shadow: 0px 12px 36px rgba(33, 33, 33, 0.3);
             box-shadow: 0px 12px 36px rgba(33, 33, 33, 0.3);
@@ -232,13 +240,13 @@
 .phone__number {
   color: #757575;
   font-size: 24px;
-  letter-spacing: 1.4px;
+  letter-spacing: 1.4;
   text-align: right; }
 
 .address__text {
   color: #757575;
   font-size: 14px;
-  letter-spacing: 1.1px;
+  letter-spacing: 1.1;
   line-height: 24px; }
 
 .form-sort__par {
@@ -291,7 +299,7 @@
   border: 2px solid #03A9F4;
   color: #03A9F4;
   font-size: 35px;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.5;
   position: relative;
   top: 28%;
   left: 14%; }
@@ -359,7 +367,7 @@
   .cat-product__link {
     color: #03A9F4;
     font-size: 16px;
-    letter-spacing: 0.18px;
+    letter-spacing: 0.18;
     overflow: hidden;
     display: block;
     height: 50px;
@@ -469,7 +477,7 @@
     color: #757575;
     white-space: pre-wrap;
     font-weight: 300;
-    letter-spacing: 1.1px;
+    letter-spacing: 1.1;
     padding-bottom: 1px;
     -webkit-transition: all ease 0.4s;
     -o-transition: all ease 0.4s;
@@ -508,7 +516,7 @@
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-family: 'PT Sans', sans-serif;
   font-weight: bold;
-  letter-spacing: 1.1px; }
+  letter-spacing: 1.1; }
 
 @media (min-width: 1200px) {
   .container {
