--- a/assets/scss/blocks/single_body.scss
+++ b/assets/scss/blocks/single_body.scss
@@ -94,6 +94,16 @@
 
 }
 
+.single_body .glsr-summary-rating {
+    float: right;
+    line-height: 1.25;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 0;
+    font-weight: 600;
+    background: none;
+  }
+
 .slick-prev:before, .slick-next:before {
     font-family: 'slick';
     font-size: 20px;
