--- a/wp_theme/template_klimat/style.css
+++ b/wp_theme/template_klimat/style.css
@@ -449,6 +449,25 @@
 .cat-product-link:hover {
   text-decoration: none; }
 
+.cat-product__reviews .glsr-summary [class*=glsr-star-] {
+  width: 20px;
+  height: 20px;
+  -webkit-background-size: 18px 18px;
+          background-size: 18px; }
+
+.cat-product__reviews .glsr-summary-rating {
+  float: right;
+  line-height: 1.25;
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 10px;
+  color: #BDBDBD;
+  font-weight: 600;
+  background: none; }
+
+.cat-product__reviews .glsr-summary {
+  text-align: right; }
+
 .other-section__header-promo {
   border-bottom: 10px solid #03A9F4;
   padding-bottom: 10px; }
@@ -559,7 +578,7 @@
               border-radius: 3px 0 0 3px; }
     .single_body__price_block-price-call {
       background: #03A9F4;
-      padding: 3.7px;
+      padding: 3.8px;
       margin-left: -5px;
       -webkit-border-radius: 0 3px 3px 0;
               border-radius: 0 3px 3px 0; }
@@ -596,6 +615,15 @@
     color: #757575;
     letter-spacing: 1.1px;
     line-height: 26px; }
+
+.single_body .glsr-summary-rating {
+  float: right;
+  line-height: 1.25;
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 0;
+  font-weight: 600;
+  background: none; }
 
 .slick-prev:before, .slick-next:before {
   font-family: 'slick';
